Fix overflow hidden bug where you cannot scroll

--- a/root/public/stylessheet.css
+++ b/root/public/stylessheet.css
@@ -8,7 +8,7 @@ body {
   font-family: "Krona One";
   text-align: center;
   height: 100vh;
-  overflow-y: hidden;
+  
 
 }
 
